Revert "* Use border-collapse: separate for normal screen.css too, so user-customized cells can render correctly."
This reverts commit 190b04bacfcc9da1e02bccae346ef132b4f84fdd.

--- a/nlw/share/skin/s3/css/print.css
+++ b/nlw/share/skin/s3/css/print.css
@@ -626,6 +626,11 @@ div.st-weblog-entrytitle span.text {
     font-family: Verdana, Helvetica, sans-serif;
 }
 
+
+table.st-ss {
+    border-collapse: separate !important;
+}
+
 table.st-ss td {
     border: #CCC 0.2px solid;
     color: black !important;
